# django_ocr_backend2

./: README.md  db.sqlite3  manage.py  pyproject.toml
django_ocr_backend2/: asgi.py  settings.py  urls.py  wsgi.py
