[tool.poetry]
name = "django_ocr_backend2"
version = "0.5"
description = "Second iteration of my Django backend project."
authors = ["JosephVC <josephvcardenas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.6"
djangorestframework = "^3.12.2"
django-admin-honeypot = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
